@@ -38,10 +38,10 @@ public class GroupEditor extends SimpleEditor {
             boolean success = false;
             if (event.getDragboard().hasContent(DragAndDropDataFormats.GROUP)) {
                 List<String> draggedGroups = (List<String>) event.getDragboard().getContent(DragAndDropDataFormats.GROUP);
-                if (bibEntry.isPresent() && draggedGroups.get(0) != null) {
+                if (bibEntry.isPresent() && draggedGroups.getFirst() != null) {
                     String newGroup = bibEntry.map(entry -> entry.getField(StandardField.GROUPS)
-                                                                     .map(oldGroups -> oldGroups + (preferences.getBibEntryPreferences().getKeywordSeparator()) + (draggedGroups.get(0)))
-                                                                     .orElse(draggedGroups.get(0)))
+                                                                     .map(oldGroups -> oldGroups + (preferences.getBibEntryPreferences().getKeywordSeparator()) + (draggedGroups.getFirst()))
+                                                                     .orElse(draggedGroups.getFirst()))
                                                   .orElse(null);
                     bibEntry.map(entry -> entry.setField(StandardField.GROUPS, newGroup));
                     success = true;
