@@ -311,7 +311,7 @@ public class XmpUtilWriter {
 
             // Write schemas (PDDocumentInformation and DublinCoreSchema) to the document metadata
             if (!resolvedEntries.isEmpty()) {
-                writeDocumentInformation(document, resolvedEntries.get(0), null);
+                writeDocumentInformation(document, resolvedEntries.getFirst(), null);
                 writeDublinCore(document, resolvedEntries, null);
             }
 
